{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "PlayerMoveInputs",
            "id": "896dbf6d-598e-4d3f-9711-305e29f0adc0",
            "actions": [
                {
                    "name": "PlayerMoveLeft",
                    "type": "Button",
                    "id": "7c43a02a-afb8-4984-965d-59c915fd0c16",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerMoveRight",
                    "type": "Button",
                    "id": "bd7116ff-7a3f-4aeb-b82a-fa6dee931676",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerMoveUp",
                    "type": "Button",
                    "id": "cfbc82ac-96be-4417-b246-159a4ce3d383",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerMoveDown",
                    "type": "Button",
                    "id": "5eac641c-6233-4c90-9401-030d6edbeda3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5e5f8f94-b8e5-42ce-83ca-86c2b8b4262a",
                    "path": "<HID::Bensussen Deutsch & Associates,Inc.(BDA) Core (Plus) Wired Controller>/hat/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da14ec02-f983-4582-a70e-1a72d048b4bf",
                    "path": "<HID::Bensussen Deutsch & Associates,Inc.(BDA) Core (Plus) Wired Controller>/hat/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67941663-83b0-40db-9cc8-dd89b27157e6",
                    "path": "<HID::Bensussen Deutsch & Associates,Inc.(BDA) Core (Plus) Wired Controller>/hat/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cdb911af-1e32-41b1-8631-8200a7e1e198",
                    "path": "<HID::Bensussen Deutsch & Associates,Inc.(BDA) Core (Plus) Wired Controller>/hat/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}